docs(demos): fix z-index of FAB, customized toolbar
Closes #388

--- a/demos/component-docs/buttons/fab/styles.scss
+++ b/demos/component-docs/buttons/fab/styles.scss
@@ -1,6 +1,6 @@
 #subtle-footer {
   background-color: #fff;
-  border-image-source: url(footer-wireframe.png);
+  border-image-source: url(../component-docs/img/footer-wireframe.png);
   border-image-repeat: repeat;
   border-image-width: 100%;
   border-bottom: 0;
